mash ime: ensure callbacks are run before closing pipe

Otherwise we hit DCHECKs, and likely leave the remote side in a bad state.

BUG=890370
TEST=covered by tests

Change-Id: Ibb903bf6fe6c67081e18459a142c7c67da0b2ac5
Reviewed-on: https://chromium-review.googlesource.com/1252639
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595244}
Former-commit-id: 547d9df6678dbae9a5387bc158ec526140fa5dab